--- a/html+css/sass/sassy.css
+++ b/html+css/sass/sassy.css
@@ -1,3 +1,107 @@
+header, footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 100px;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+header h2, footer h2 {
+  font-size: 50px;
+  margin: 0;
+  color: #CF649A;
+}
+
+header img, footer img {
+  height: 50px;
+}
+
+footer {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 40px;
+}
+
+footer p {
+  margin: 0;
+  font-size: small;
+  color: #9b3a6b;
+}
+
+main .deck {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 20px;
+}
+
+main .deck .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 20%;
+  padding: 15px;
+  border-radius: 5px;
+  -webkit-box-shadow: #CF649A 0 0 15px;
+          box-shadow: #CF649A 0 0 15px;
+}
+
+main .deck .card h3 {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+main .deck .card a {
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 10px 15px;
+  border-radius: 2px;
+  color: #ffc6e3;
+  background-color: #CF649A;
+  text-align: center;
+  text-decoration: none;
+}
+
+main .deck .card a:hover {
+  background-color: #9b3a6b;
+}
+
+main .deck .card p {
+  font-size: 15px;
+}
+
 body {
   background-color: #ffc6e3;
   font-family: 'Courier New', Courier, monospace;
@@ -9,33 +113,36 @@ body {
   margin: auto;
 }
 
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 20px 100px;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-header h2 {
-  font-size: 50px;
-  margin: 0;
-  color: #CF649A;
-}
-
-header img {
-  height: 50px;
-}
-
 main {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.6)), to(rgba(255, 255, 255, 0.1)));
+  background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.1));
   padding: 20px;
   color: #9b3a6b;
+  text-align: justify;
+}
+
+main > p:first-of-type {
+  width: 80%;
+  margin: 32px auto 56px auto;
+  font-size: small;
+  font-style: oblique 20deg;
+}
+
+main > p {
+  margin: 32px auto;
+}
+
+main > img:first-of-type {
+  float: left;
+  margin: 0 10px 5px 0;
+}
+
+main > img:nth-of-type(2) {
+  float: right;
+  margin: 0 0 5px 10px;
+}
+
+main img:hover {
+  opacity: .8;
 }
 /*# sourceMappingURL=sassy.css.map */
